add: missing multer deps and its types
